--- a/llm-config.defaults.jsonc
+++ b/llm-config.defaults.jsonc
@@ -30,6 +30,10 @@
       "outputter": {
         "provider": "openai",
         "model": "gpt-5-nano"
+      },
+      "screen_analyzer": {
+        "provider": "openai",
+        "model": "gpt-4o"
       }
     }
   },
@@ -65,6 +69,10 @@
       "outputter": {
         "provider": "openai",
         "model": "gpt-5-nano"
+      },
+      "screen_analyzer": {
+        "provider": "openai",
+        "model": "gpt-4o"
       }
     }
   }
