--- a/llm-config.override.template.jsonc
+++ b/llm-config.override.template.jsonc
@@ -34,6 +34,10 @@
     "outputter": {
       "provider": "",
       "model": ""
+    },
+    "screen_analyzer": {
+      "provider": "",
+      "model": ""
     }
   }
 }
